# FAST_API_AUTH_MOBILE_AND_WEB_using_email

./: .env_sample  .gitignore  README.md  alembic.ini  cleandb.sh  pyproject.toml  requirements.txt  text.txt
alembic/: env.py
alembic/versions/: 254e0dc7de95_db_cleaned_up.py  590ae1b4b34e_db_cleaned_up.py  70763ad76d34_db_cleaned_up.py  c1253a843443_db_cleaned_up.py  c545aed968bd_db_cleaned_up.py
app/: main.py
app/authentication/: dependencies.py  helpers.py  models.py  routes.py  schemas.py  security.py  services.py  utils.py
app/core/: config.py
app/database/: connection.py
app/helpers/: time.py
app/model_registry/: __init__.py
app/user_settings/: models.py  routes.py  schemas.py
app/user_settings/services/: services.py
app/users/: helpers.py  models.py  routes.py  schemas.py
app/users/services/: create_default_settings.py  services.py
